development/sf_project/force-app/main/default/objects/ClinicalServiceRequest/fields/Referral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_Notes__c</fullName>
    <label>Referral Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Additional clinical notes or context for the referral. Provides supplementary information for the receiving provider.</description>
    <inlineHelpText>Any additional notes or clinical context for the receiving provider</inlineHelpText>
</CustomField>