development/sf_project/force-app/main/default/objects/ClinicalServiceRequest/fields/Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reason__c</fullName>
    <label>Referral Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Clinical reason for the internal referral. Describes why the patient is being referred to another provider.</description>
    <inlineHelpText>Describe the clinical reason for this referral</inlineHelpText>
</CustomField>