development/sf_project/force-app/main/default/objects/ClinicalServiceRequest/fields/Referred_To_Provider__c.field-meta.xml
<CustomField>
    <fullName>Referred_To_Provider__c</fullName>
    <label>Referred To Provider</label>
    <type>Lookup</type>
    <referenceTo>HealthcareProvider</referenceTo>
    <relationshipName>ReferredClinicalServiceRequests</relationshipName>
    <relationshipLabel>Referred Clinical Service Requests</relationshipLabel>
    <description>The healthcare provider receiving this referral. Indicates which provider the patient is being referred to.</description>
    <inlineHelpText>Select the provider who will receive this referral</inlineHelpText>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>