development/sf_project/force-app/main/default/objects/ClinicalServiceRequest/fields/Specialty_Requested__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Requested__c</fullName>
    <label>Specialty Requested</label>
    <type>Text</type>
    <length>255</length>
    <description>The medical specialty being requested for this referral. Auto-populated from the selected provider's taxonomy.</description>
    <inlineHelpText>Medical specialty for this referral</inlineHelpText>
</CustomField>